[gd_scene load_steps=2 format=3 uid="uid://c4n8y2q4n3m5x"]

[ext_resource type="Script" path="res://src/ui/components/combat/TerrainTooltip.gd" id="1_kj4m2"]

[node name="TerrainTooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kj4m2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Position: (0, 0)"

[node name="HSeparator1" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FeaturesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Features:"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EffectsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Effects:"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ModifiersLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Modifiers:" 